syntax="proto3";

package book_service;
option go_package="genproto/book_service";

import "book.proto";

service BookService {
    rpc Create(CreateBookRequest) returns (CreateBookResponse) {}
    rpc GetByID(GetBookByIDRequest) returns (GetBooksResponse) {}
    rpc GetAll(GetBooksRequest) returns (GetBooksResponse) {}
    rpc Update(UpdateBookRequest) returns (UpdateBookResponse) {}
    rpc Delete(DeleteBookRequest) returns (DeleteBookResponse) {}
}